--- a/base/pod.yaml
+++ b/base/pod.yaml
@@ -7,8 +7,4 @@ spec:
   containers:
   - name: my
     image: ubuntu
-    command:
-    - "sh"
-    - "-c"
-    - "sleep"
-    - "500"
+    command: ["top"]
