--- a/base/pod.yaml
+++ b/base/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mypod
+  name: mypod2
   namespace: flux-system
 spec:
   containers:
@@ -9,4 +9,4 @@ spec:
     image: ubuntu
     command:
     - "sleep"
-    - "500"
+    - "1200"
